// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "appId": "Please enter your app id",
  "clientDisconnectMinutes": false,
  "facebookAppId": "Please enter your facebook app id",
  "facebookAppSecret": "Please enter your facebook app secret",
  "facebookPageId": "Please enter your facebook page id",
  "facebookUserAccessToken": "User Access Token is required to create the integration",
  "name": "Please enter a name",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "appId": "Please enter your app id",
  "clientDisconnectMinutes": "Must be less than or equal to 1440",
  "facebookAppId": "Please enter your facebook app id",
  "facebookAppSecret": "Please enter your facebook app secret",
  "facebookPageId": "Please enter your facebook page id",
  "facebookUserAccessToken": "User Access Token is required to create the integration",
  "name": "Please enter a name",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "appId": false,
  "clientDisconnectMinutes": false,
  "facebookAppId": false,
  "facebookAppSecret": false,
  "facebookPageId": false,
  "facebookUserAccessToken": false,
  "name": false,
}
`;
